eval/data/test_query/param_evaluation/error_log.txt
Error processing query at level 2, Query ID: 971
Error: list index out of range
Traceback (most recent call last):
  File "/tmp/ipykernel_2389887/3556294841.py", line 48, in <module>
    func_info_list["task_num"] = subtasks[j]["subtask_number"]
                                 ~~~~~~~~^^^
IndexError: list index out of range


Error processing query at level 2, Query ID: 1410
Error: list index out of range
Traceback (most recent call last):
  File "/tmp/ipykernel_2389887/3556294841.py", line 48, in <module>
    func_info_list["task_num"] = subtasks[j]["subtask_number"]
                                 ~~~~~~~~^^^
IndexError: list index out of range


Error processing query at level 3, Query ID: 887
Error: list index out of range
Traceback (most recent call last):
  File "/tmp/ipykernel_2389887/3556294841.py", line 48, in <module>
    func_info_list["task_num"] = subtasks[j]["subtask_number"]
                                 ~~~~~~~~^^^
IndexError: list index out of range


